--- a/Templates/Designs/TTonlineNew/Page.cshtml
+++ b/Templates/Designs/TTonlineNew/Page.cshtml
@@ -261,7 +261,7 @@
                 <!-- Go to www.addthis.com/dashboard to customize your tools --> 
                 <div class="addthis_inline_share_toolbox"></div>              
               </div> 
-              <div class="hidden" data-banner>
+              <div class="col-md-12 hidden-md hidden-lg hidden-xl" data-banner>
                    @Include("Custom/Banners/MobileLeaderboardMain.cshtml")
               </div>
               <div class="author-section" data-template="AuthorsTemplate" data-json-feed="Default.aspx?ID=@autorPageID&redirect=false&Autor=">
