--- a/Templates/Designs/TTonlineNew/TemplateRenderer/MobileLeaderboardMainBanner.cshtml
+++ b/Templates/Designs/TTonlineNew/TemplateRenderer/MobileLeaderboardMainBanner.cshtml
@@ -1,6 +1,3 @@
-@if (Pageview.Device.ToString() == "Mobile")
-{
-    <div class="hidden col-12 mobile-leaderboard-main-banner">
-        @Include("../Custom/Banners/MobileLeaderboardMain.cshtml")
-    </div>
-}
+<div class="hidden-md hidden-lg hidden-xl col-xs-12 mobile-leaderboard-main-banner">
+    @Include("../Custom/Banners/MobileLeaderboardArticleListGeneric.cshtml")
+</div>
