--- a/Templates/Designs/TTonlineNew/eCom/Product/_Product.cshtml
+++ b/Templates/Designs/TTonlineNew/eCom/Product/_Product.cshtml
@@ -417,13 +417,9 @@
         int count = 0;
     }
    
-    @if (Pageview.Device.ToString() == "Mobile")
-    {
-        <div class="row mobile-banner-main">
-            @Include("../../Custom/Banners/MobileLeaderboardMain.cshtml")
-        </div>
-    
-    }
+    <div class="hidden-md hidden-lg hidden-xl row mobile-banner-main" data-banner>
+        @Include("../../Custom/Banners/MobileLeaderboardArticleListGeneric.cshtml")
+    </div>
 
     <div class="row alte-produse-row">
         @if (GetLoop("eCom:Related.MoreFromSameManufacturer").Any())
