--- a/Templates/Designs/TTonlineNew/Custom/Banners/MobileLeaderboardMain.cshtml
+++ b/Templates/Designs/TTonlineNew/Custom/Banners/MobileLeaderboardMain.cshtml
@@ -1,1 +1,2 @@
 <ins data-revive-zoneid="22" data-revive-id="30be11c85ce356e14970630466da228f"></ins>
+<script async src="//adserver.dotfusion.ro/revive/www/delivery/asyncjs.php"></script>
