--- a/Templates/Designs/TTonlineNew/eCom/Product/_Product.cshtml
+++ b/Templates/Designs/TTonlineNew/eCom/Product/_Product.cshtml
@@ -418,7 +418,8 @@
     }
    
     <div class="hidden-md hidden-lg hidden-xl row mobile-banner-main" data-banner>
-        @Include("../../Custom/Banners/MobileLeaderboardArticleListGeneric.cshtml")
+        <ins data-revive-zoneid="24" data-revive-block="1" data-revive-blockcampaign="1" data-revive-id="30be11c85ce356e14970630466da228f"></ins>
+        <script async src="//adserver.dotfusion.ro/revive/www/delivery/asyncjs.php"></script>
     </div>
 
     <div class="row alte-produse-row">
