--- a/Templates/CookieWarning/TopPageWarning.html
+++ b/Templates/CookieWarning/TopPageWarning.html
@@ -24,7 +24,7 @@
 
         function setOptInCookieAndRefresh(optInLevel) {
             setOptInCookie(optInLevel);
-            setTimeout(function () { location.reload(true); }, 100);
+            //setTimeout(function () { location.reload(true); }, 100);
             return false;
         }
 
@@ -44,9 +44,11 @@
 
     </script>
     <h1>Accept cookie</h1>
-	<p>www.ttonline.ro utilizează fişiere de tip cookie pentru a personaliza și îmbunătăți experiența ta pe Website-ul nostru.</p>
-	<p>Te informăm că ne-am actualizat politicile pentru a integra în acestea și în activitatea curentă a www.ttonline.ro cele mai recente modificări propuse de Regulamentul (UE) 2016/679 privind protecția persoanelor fizice în ceea ce privește prelucrarea datelor cu caracter personal și privind libera<br /> circulație a acestor date. Înainte de a continua navigarea pe Website-ul nostru, te rugăm să aloci timpul necesar pentru a citi și înțelege conținutul <a style="text-decoration: underline;" href="/Default.aspx?ID=14127">Politicii de Cookie</a>.</p>
-    <p>Prin continuarea navigării pe Website-ul nostru confirmi acceptarea utilizării fişierelor de tip cookie conform Politicii de Cookie. Îți mulțumim  pentru acest accept și nu uita totuși că poți modifica în orice moment setările acestor fişiere cookie urmând instrucțiunile din Politica de Cookie.</p>
+    <div data-nosnippet="data-nosnippet">
+        <p>www.ttonline.ro utilizează fişiere de tip cookie pentru a personaliza și îmbunătăți experiența ta pe Website-ul nostru.</p>
+        <p>Te informăm că ne-am actualizat politicile pentru a integra în acestea și în activitatea curentă a www.ttonline.ro cele mai recente modificări propuse de Regulamentul (UE) 2016/679 privind protecția persoanelor fizice în ceea ce privește prelucrarea datelor cu caracter personal și privind libera<br /> circulație a acestor date. Înainte de a continua navigarea pe Website-ul nostru, te rugăm să aloci timpul necesar pentru a citi și înțelege conținutul <a style="text-decoration: underline;" href="/Default.aspx?ID=14127">Politicii de Cookie</a>.</p>
+        <p>Prin continuarea navigării pe Website-ul nostru confirmi acceptarea utilizării fişierelor de tip cookie conform Politicii de Cookie. Îți mulțumim  pentru acest accept și nu uita totuși că poți modifica în orice moment setările acestor fişiere cookie urmând instrucțiunile din Politica de Cookie.</p>
+    </div>
 	<div class="cookie-btn">
 		<!--<a href="#" onclick="return setOptInCookie(0);" style="margin-right: 10px;">Nu sunt de acord</a>
 		<a href="#" onclick="return setOptInCookie(1);" style="margin-right: 10px; display:none;">Accept doar cookie functional</a>-->
