--- a/Templates/Designs/TTonlineNew/Paragraph/New_ListaStiriHomepage.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/New_ListaStiriHomepage.cshtml
@@ -55,7 +55,7 @@
     {{#each Article}}
         <article class="simple-post simple-big clearfix col-md-12 separator-articole">
             <div class="simple-thumb">
-                <a href="{{Link}}">
+                <a href="/Default.aspx?ID={{pagePageID}}">
                     <figure class="">
                         <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=255&Height=168" alt="{{itemTitlu}}"/> 
                     </figure>
