--- a/Templates/Designs/TTonlineNew/LandingPageCatalogIndustrial.cshtml
+++ b/Templates/Designs/TTonlineNew/LandingPageCatalogIndustrial.cshtml
@@ -32,9 +32,9 @@ string ParametruProdus = System.Web.HttpContext.Current.Request["productid"] != 
       <div class="row">
         <!--Main Content Begin-->
         <div class="dwcontent" id="maincontent" title="Main Content" data-settings="unwrap=true"></div>
-        <div class="hidden">
+        <!--<div class="hidden">
           <div class="dwcontent hidden" id="FormNewsletterIBS" title="Form" data-settings="unwrap=true"></div>
-        </div>
+        </div>-->
         <!--Main Content End-->
       </div>
       <div class="row" style="margin-bottom:20px; margin-top:20px;">
