--- a/Templates/Designs/TTonlineNew/Page.cshtml
+++ b/Templates/Designs/TTonlineNew/Page.cshtml
@@ -53,7 +53,11 @@
               @RenderPlaceholderImageTop("pre-render-element--xl")
             </div>
           </article><!-- .post-wrapper -->
-
+               <div class="hidden-md hidden-lg hidden-xl row mobile-banner-main" data-banner style="min-height: 115px;display: flex;margin-top: 2em;justify-content: center;">
+                    <!-- Revive Adserver Asynchronous JS Tag - Generated with Revive Adserver v5.0.5 -->
+                    <ins data-revive-zoneid="24" data-revive-id="30be11c85ce356e14970630466da228f"></ins>
+                    <script async src="//adserver.dotfusion.ro/revive/www/delivery/asyncjs.php"></script>
+                </div>
           @SnippetStart("Tags")
            <div class="sidebar-handlebars-wrapper" data-template="TagsTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesID&redirect=false">
             </div>
