--- a/Templates/Designs/TTonlineNew/eCom/Product/_Product.cshtml
+++ b/Templates/Designs/TTonlineNew/eCom/Product/_Product.cshtml
@@ -417,8 +417,9 @@
         int count = 0;
     }
    
-    <div class="hidden-md hidden-lg hidden-xl row mobile-banner-main" data-banner>
-        <ins data-revive-zoneid="24" data-revive-block="1" data-revive-blockcampaign="1" data-revive-id="30be11c85ce356e14970630466da228f"></ins>
+    <div class="hidden-md hidden-lg hidden-xl row mobile-banner-main" data-banner style="min-height: 115px;display: flex;margin-top: 2em;justify-content: center;">
+        <!-- Revive Adserver Asynchronous JS Tag - Generated with Revive Adserver v5.0.5 -->
+        <ins data-revive-zoneid="24" data-revive-id="30be11c85ce356e14970630466da228f"></ins>
         <script async src="//adserver.dotfusion.ro/revive/www/delivery/asyncjs.php"></script>
     </div>
 
