--- a/Templates/Designs/TTonlineNew/eCom/ProductList/ShopFront.cshtml
+++ b/Templates/Designs/TTonlineNew/eCom/ProductList/ShopFront.cshtml
@@ -76,7 +76,7 @@ string NumarulTotalPagini = GetInteger("Ecom:ProductList.TotalPages") != null ? 
       </div>
  
 <div class="row product-list clearfix"    data-maxcompare='@Translate("maxCompare", "Maximum to compare: 3")'>    
-       <div class="hidden-md hidden-lg hidden-xl col-md-12" data-banner>
+       <div class="hidden-md hidden-lg hidden-xl col-md-12" data-banner style="min-height: 115px;display: flex;margin-top: 2em;justify-content: center; margin-left: 1em;">
               @Include("../../Custom/Banners/MobileLeaderboardArticleListSection1.cshtml")
         </div>    
 
