readMore button (mobile)

--- a/Templates/Designs/TTonlineNew/css/custom.less
+++ b/Templates/Designs/TTonlineNew/css/custom.less
@@ -21014,7 +21014,7 @@ body.dark-skin,
 	clear: both
 }
 .lang-ro #UltimeleStiri {
-	height: 1065px;
+	height: auto;
 }
 .lang-ro #UltimeleStiri .simple-thumb {
 	width: 250px !important;
@@ -23056,7 +23056,7 @@ body.dark-skin,
 		height: 330px;
 	}
 	.lang-ro #UltimeleStiri {
-		height: 1700px;
+		height: auto;
 	}
 	.lang-ro #UltimeleStiri article{
 		display: grid;
